feat: add IRPF calculation for BR stocks and FIIs (#288)
* feat: add IRPF calculation for BR stocks and FIIs with detailed buy, sell, and dividend data

- Introduced `BrCurrencyConverter` for BRL operations and calculations.
- Added `FiiBuyReader` and `FiiSellReader` for FIIs, with associated unit tests.
- Implemented `BrIrpfTable` component in the frontend for displaying BR stock and FII IRPF data.
- Enhanced `IrpfResource` and `IrpfCalculator` to handle BR stocks and FIIs with validations for malformed symbols, overselling, and future operations.
- Updated test cases and resources for comprehensive BR stock and FII scenarios.

* refactor: improve test readability with extracted variables and consistent use of assertions

* refactor: extract variables for test readability and replace literals with constants in FundamentusResource

* refactor: add readonly modifiers to props, refine exception handling, and improve equality logic in `BoundedLruMap`

- Marked `data` and `children` props as readonly in components (`StockTable`, `Layout`) to enforce immutability.
- Replaced unused exception variable with `_` in `FundamentusResource` for clarity.
- Enhanced `BoundedLruMap` with `equals` and `hashCode` methods for improved comparison and caching behavior.
- Updated tests to normalize number formatting for `dividendsTaxBrl` field.

* refactor: improve test readability and maintainability with extracted variables, remove unnecessary type assertions, and update configuration for SonarQube integration

* refactor: add explicit `Response` type assertion in tests to improve type safety and consistency